# libraries

./: .editorconfig  .gitignore  README.md  TODO  pyproject.toml
c++/: Makefile  pyproject.toml
c++/build_system/: build.py
c++/json/: json.h
c++/lpc/: lpc.cpp  lpc.h  main.cpp  parser.h  test.json  test.txt
c++/lpc/tests/: json.json  main.cpp
c++/parser/: test.txt
c++/rxd/: Makefile
c++/rxd/include/: SDL2  SDL2_image
c++/rxd/lib/: SDL2
c++/rxd/src/: graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  math.cpp  math.h  prelude.h  renderer.h  rxd.cpp  rxd.h  window.cpp  window.h
c++/test/: main.cpp
json/: json.h  main.cpp
parser/: format.json  main.cpp  parser.h  parser.py  parser_generator.py  test.txt
python/lpc/: pyproject.toml
python/lpc/examples/: json_parser.py
python/lpc/lpc/: lpc.py
python/lpc/tests/: __init__.py  test_lpc.py
python/test/: pyproject.toml
python/test/test/: main.py
unittest/: unittest.h
