[tool.poetry]
name = "build-system"
version = "0.1.0"
description = ""
authors = ["Rayshard Thompson <rayshard.thompson@kensho.com>"]

[tool.poetry.scripts]
build = 'build_system.build:build'
run = 'build_system.build:run'
release = 'build_system.build:release'
create = 'build_system.build:create'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
