[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Rayshard Thompson <rayshard.t123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pylpc = {git = "https://github.com/Rayshard/pylpc.git", rev = "main", develop = false }

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
